<resources>
    <string name="app_name">Otago PsyAn Lab</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_done">Done</string>
    <string name="action_discard">Discard</string>
    <string name="action_discard_changes">Discard Changes</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_save">Save</string>
    <string name="action_new_rule">New Rule</string>
    <string name="action_edit">Edit</string>
    <string name="action_add_new">Add New</string>
    <string name="action_clear">Clear</string>
    <string name="action_rename">Rename</string>
    <string name="action_add_field">Add Field</string>
    <string name="action_save_exit">Save &amp; Exit</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="label_authors">Authors:</string>
    <string name="label_date_created">Date Created:</string>
    <string name="label_file_size">File Size:</string>
    <string name="label_last_run">Last Run:</string>
    <string name="label_number_subjects">Total Subjects:</string>
    <string name="label_record_size">Records:</string>
    <string name="label_select_user">Select User</string>
    <string name="label_user_experiments">Experiments</string>
    <string name="label_user_records">Records</string>
    <string name="label_user_subjects">Total Subjects</string>
    <string name="label_modified">Modified</string>
    <string name="label_no_loops">No Loops</string>
    <string name="menu_add">Add</string>
    <string name="menu_admin_password">Admin Password</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_delete_all">Delete All</string>
    <string name="menu_done">Done</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_import">Import</string>
    <string name="menu_manage">Manage</string>
    <string name="menu_new_user">New</string>
    <string name="menu_records">Records</string>
    <string name="menu_run">Run Experiment</string>
    <string name="menu_select_all">Select All</string>
    <string name="menu_settings">Settings</string>
    <string name="title_admin_password">Set Administrator Password</string>
    <string name="title_authenticate">Authorisation Required</string>
    <string name="section_title_experiments">EXPERIMENTS</string>
    <string name="title_select_users">Select Users</string>
    <string name="subtitle_fmt_num_items_selected">%d items selected</string>
    <string name="subtitle_one_item_selected">One item selected</string>
    <string name="message_auth_failure">Sorry, try again.</string>
    <string name="message_name_empty">The user must have a name.</string>
    <string name="message_password_mismatch">Password mismatch.</string>
    <string name="message_password_required">You need to enter a password</string>
    <string name="message_error">An error has occurred.</string>
    <string name="text_delete_user_warning">User and all the associated data will be deleted permanently.</string>
    <string name="warning_missing_password">Please set password</string>
    <string name="warning_password_mismatch">Passwords do not match</string>
    <string name="title_set_password">Set Password</string>
    <string name="authentication_failure">Authentication Failure</string>
    <string name="text_date_never">never</string>
    <string name="option_no">No</string>
    <string name="option_yes">Yes</string>
    <string name="symbol_required">*</string>
    <string name="filler_experiment_name">Self Paced Reading Experiment</string>
    <string name="filler_experiment_authors">Hunter Hatfield, Tonic Artos.</string>
    <string name="filler_experiment_created">c. 28 Feb, 2013</string>
    <string name="filler_experiment_ran">r. 1 April, 2013</string>
    <string name="filler_experiment_description">An experiment description that uses markdown syntax to format itself.</string>
    <string name="text_required_infotext">*required</string>
    <string name="title_import">Import Experiment</string>
    <string name="action_import">Import</string>
    <string name="action_new">New</string>
    <string name="file_header_experiments">Experiments</string>
    <string name="format_error_importing">Errors were encountered while reading %s.</string>
    <string name="record_section_header">Collected Records</string>
    <string name="filler_record_header_count">40 records</string>
    <string name="format_header_record_count">%d records</string>
    <string name="label_experiment">Experiment</string>
    <string name="label_records">Records</string>
    <string name="label_properties">Properties</string>
    <string name="label_assets">Assets</string>
    <string name="label_subject">Subject</string>
    <string name="label_program">Program</string>
    <string name="title_set_type">Configure</string>
    <string name="label_type_image_asset">Image Asset</string>
    <string name="label_type_audio_asset">Audio Asset</string>
    <string name="label_type_video_asset">Video Asset</string>
    <string name="label_type_unknown_asset">Unknown</string>
    <string name="menu_new">New</string>
    <string name="title_confirm_delete_asset">Delete Asset?</string>
    <string name="button_confirm_delete">Delete</string>
    <string name="action_delete">Delete</string>
    <string name="title_import_asset">Import Asset</string>
    <string name="label_header_csv_data">CSV Data</string>
    <string name="label_header_images">Images</string>
    <string name="label_header_videos">Videos</string>
    <string name="label_header_fonts">Fonts</string>
    <string name="label_header_sounds">Sounds</string>
    <string name="label_add_asset">Add Asset</string>
    <string name="label_no_assets">No Assets</string>
    <string name="header_sounds">Sound Files</string>
    <string name="header_csv_data">CSV Data</string>
    <string name="header_videos">Videos</string>
    <string name="header_fonts">Fonts</string>
    <string name="header_images">Images</string>
    <string name="title_exit_designer">Exit Designer</string>
    <string name="designer_tab_properties">Properties</string>
    <string name="designer_tab_subject">Landing Page</string>
    <string name="designer_tab_assets">Assets</string>
    <string name="designer_tab_program">Program</string>
    <string name="action_new_loop">New Loop</string>
    <string name="label_range_start">Start</string>
    <string name="label_range_end">End</string>
    <string name="label_is_min">Minimum</string>
    <string name="action_create">Create</string>
    <string name="title_new_generator">New Generator</string>
    <string name="title_edit_generator">Edit Generator</string>
    <string name="label_random">Random</string>
    <string name="label_shuffle">Shuffle</string>
    <string name="label_is_max">Maximum</string>
    <string name="hint_name">Name</string>
    <string name="label_format_iterations">%d cycles</string>
    <string name="label_iteration">1 cycle</string>
    <string name="hint_action_name">Action name</string>
    <string name="hint_loop_name">Loop name</string>
    <string name="hint_rule_name">Rule name</string>
    <string name="hint_scene_name">Scene name</string>
    <string name="label_trigger">Trigger</string>
    <string name="label_condition">Condition</string>
    <string name="hint_formula">Conditional formula</string>
    <string name="label_operands">Operands</string>
    <string name="label_action">Action</string>
    <string name="label_parameters">Parameters</string>
    <string name="label_subject_detail_toggle">Toggle</string>
    <string name="label_subject_detail_time">Time</string>
    <string name="label_subject_detail_text">Text</string>
    <string name="label_subject_detail_date">Date</string>
    <string name="label_subject_detail_single_choice">Single Choice</string>
    <string name="label_subject_detail_multiple_choice">Multiple Choice</string>
    <string name="label_subject_detail_dropdown">Dropdown</string>
    <string name="label_subject_detail_number">Number</string>
    <string name="label_subject_detail_date_and_time">Date and Time</string>
    <string name="title_select_loops">Select Loops</string>
    <string name="title_select_scenes">Select Scenes</string>
    <string name="title_select_rules">Select Rules</string>
    <string name="title_select_actions">Select Actions</string>
    <string name="title_select_generators">Select Generators</string>
    <string name="title_edit_iterations">Set Number of Cycles</string>
    <string name="format_property_label">%s</string>
    <string name="title_new_prop">New Prop</string>
    <string name="title_edit_prop">Edit Prop</string>
    <string name="title_save_changes">Save Changes?</string>
    <string name="title_stage">Stage</string>
    <string name="label_stage_orientation">Orientation</string>
    <string name="label_trigger_object">Object</string>
    <string name="label_trigger_event">Event</string>
    <string name="label_action_method">Method</string>
    <string name="label_action_object">Object</string>
    <string name="label_stage_width">Width</string>
    <string name="label_stage_height">Height</string>
    <string name="label_stage_num_props">Number of Props</string>
    <string name="title_edit_stage_properties">Edit Properties</string>
    <string name="format_stage_detail">%1$d×%2$d (%3$s) %4$d props</string>
    <string name="format_screen_dimensions">%1$d×%2$d</string>
    <string name="label_orientation">Orientation</string>
    <string name="label_dimensions">Dimensions</string>
    <string name="text_stage_undefined">Stage not created.</string>
    <string name="title_select_prop">Select Prop</string>
    <string name="default_text_prop_name">Text Prop</string>
    <string name="default_button_prop_name">Button Prop</string>
    <string name="default_image_prop_name">Image Prop</string>
    <string name="default_prop_name">Prop</string>
    <string name="format_default_prop_name">%1$s %2$d</string>
    <string name="title_rules">Rules</string>
    <string name="title_loops">Loops</string>
    <string name="label_loop_cycles">Cycles</string>
    <string name="content_description_drag_handle">Drag Handle</string>
    <string name="title_generators">Generators</string>
    <string name="title_actions">Actions</string>
    <string name="title_assets">Assets</string>
    <string name="title_scenes">Scenes</string>
    <string name="action_remove">Remove</string>
    <string name="title_columns">Columns</string>
    <string name="label_column_start">Start</string>
    <string name="label_column_names">Names</string>
    <string name="hint_column_names">Column names, comma separated.</string>
    <string name="title_column_rows">Rows</string>
    <string name="label_row_start">Start</string>
    <string name="label_row_number">Number</string>
    <string name="label_generator_range">Range</string>
    <string name="hint_description_subject">Description and assistance Text</string>
    <string name="hint_title_subject">Title</string>
    <string name="hint_field_name">Field name</string>
    <string name="content_description_remove_row">Remove Row</string>
    <string name="title_subject_questions">Questions</string>
    <string name="hint_landing_page_description">Introduction, description, subject instructions, and anything else…</string>
    <string name="title_landing_page_description">Body</string>
    <string name="hint_landing_page_title">Title</string>
    <string name="title_landing_page_title">Title</string>
    <string name="title_experiment_name">Experiment Name</string>
    <string name="title_description">Description</string>
    <string name="title_authors">Authors</string>
    <string name="hint_authors">Authors</string>
    <string name="hint_description">Description</string>
    <string name="hint_experiment_name">Name</string>
</resources>