<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_background"
    android:clipToPadding="false"
    android:padding="32dip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="sans-serif-light"
            android:text="@string/title_experiment_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:hint="@string/hint_experiment_name"
            android:inputType="textCapSentences|textAutoCorrect"
            android:minEms="10"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="32dip"
            android:fontFamily="sans-serif-light"
            android:text="@string/title_authors"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/authors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:hint="@string/hint_authors"
            android:inputType="textCapSentences|textAutoCorrect"
            android:minEms="15"
            android:singleLine="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="32dip"
            android:fontFamily="sans-serif-light"
            android:text="@string/title_description"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:hint="@string/hint_description"
            android:inputType="textCapSentences|textMultiLine|textAutoCorrect"
            android:singleLine="false" />
    </LinearLayout>

</ScrollView>