<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:orientation="horizontal"
    android:paddingLeft="16dip"
    android:paddingRight="16dip"
    android:useDefaultMargins="true" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dip"
        android:fontFamily="sans-serif-light"
        android:paddingBottom="8dip"
        android:paddingLeft="0dip"
        android:paddingRight="0dip"
        android:paddingTop="8dip"
        android:text="@string/title_column_rows"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_gravity="center_vertical"
        android:fontFamily="sans-serif-light"
        android:paddingRight="8dip"
        android:text="@string/label_row_start"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/row_start"
        style="?android:attr/spinnerStyle"
        android:layout_gravity="fill_horizontal"
        android:fontFamily="sans-serif-light" />

    <TextView
        android:layout_gravity="center_vertical"
        android:fontFamily="sans-serif-light"
        android:paddingRight="8dip"
        android:text="@string/label_row_number"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/num_rows"
        style="?android:attr/spinnerStyle"
        android:layout_gravity="fill_horizontal"
        android:fontFamily="sans-serif-light" />

</GridLayout>