<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="true"
    android:minHeight="48dip"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/handle"
        android:layout_width="36dip"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/content_description_drag_handle"
        android:paddingLeft="12dip"
        android:paddingRight="8dip"
        android:scaleType="centerInside"
        android:src="@drawable/ic_handle" />

    <EditText
        android:id="@+id/text"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="16dip"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:hint="@string/hint_field_name"
        android:inputType="textCapSentences|textNoSuggestions"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <Spinner
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="0dip"
        android:enabled="false"
        android:paddingRight="0dip" />

    <ImageButton
        android:id="@+id/remove"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="48dip"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/content_description_remove_row"
        android:padding="8dip"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_remove"
        android:visibility="invisible" />

</LinearLayout>