<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingBottom="16dip"
    android:paddingLeft="16dip"
    android:paddingRight="16dip"
    android:paddingTop="8dip"
    android:scrollbarStyle="outsideOverlay" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:useDefaultMargins="false" >

        <TextView
            android:layout_gravity="center_vertical"
            android:fontFamily="sans-serif-light"
            android:paddingRight="8dip"
            android:text="Name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/name"
            android:layout_gravity="fill_horizontal"
            android:hint="@string/hint_name"
            android:inputType="text|textNoSuggestions"
            android:minHeight="48dip"
            android:selectAllOnFocus="true" />

        <TextView
            android:layout_gravity="center_vertical|start"
            android:layout_marginTop="8dip"
            android:fontFamily="sans-serif-light"
            android:paddingRight="8dip"
            android:text="Kind"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/type"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="8dip"
            android:minHeight="48dip" />

        <TextView
            android:layout_columnSpan="2"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="24dip"
            android:fontFamily="sans-serif-light"
            android:text="@string/label_generator_range"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_marginTop="8dip"
            android:fontFamily="sans-serif-light"
            android:paddingRight="8dip"
            android:text="@string/label_range_start"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/start"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="8dip"
            android:hint="0"
            android:inputType="numberSigned|number"
            android:selectAllOnFocus="true" />

        <TextView
            android:layout_marginTop="8dip"
            android:fontFamily="sans-serif-light"
            android:paddingRight="16dip"
            android:text="@string/label_range_end"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/end"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="8dip"
            android:hint="0"
            android:inputType="numberSigned|number"
            android:selectAllOnFocus="true" />
    </GridLayout>

</ScrollView>