<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2012, 2013, 2014 University of Otago, Tonic Artos <tonic.artos@gmail.com>

  Otago PsyAn Lab is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program. If not, see <http://www.gnu.org/licenses/>.

  In accordance with Section 7(b) of the GNU General Public License version 3,
  all legal notices and author attributions must be preserved.
  -->

<LinearLayout
    android:id="@+id/column"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <GridLayout
        style="@style/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:useDefaultMargins="false">

        <TextView
            android:layout_columnSpan="2"
            android:layout_gravity="center_vertical|fill_horizontal"
            android:fontFamily="sans-serif-light"
            android:text="@string/label_action"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_gravity="center_vertical|start"
            android:layout_marginTop="8dip"
            android:fontFamily="sans-serif-light"
            android:paddingRight="8dip"
            android:text="@string/label_action_object"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/action_object"
            style="?android:attr/spinnerStyle"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="8dip"
            android:gravity="center_vertical|left"
            android:minHeight="48dip"
            android:paddingBottom="20dip"
            android:paddingLeft="12dp"
            android:paddingTop="20dip"
            android:textSize="18sp" />

        <TextView
            android:layout_gravity="center_vertical|start"
            android:layout_marginTop="8dip"
            android:fontFamily="sans-serif-light"
            android:paddingRight="8dip"
            android:text="@string/label_action_method"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/action_method"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="8dip"
            android:minHeight="48dip" />
    </GridLayout>

    <TextView
        android:id="@+id/parameter_title"
        style="@style/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|fill_horizontal"
        android:fontFamily="sans-serif-light"
        android:text="@string/label_parameters"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>